kubernetes/apps/default/recyclarr/templates/network_policy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: recyclarr
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: recyclarr
    egress:
      - toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
      - toFQDNs:
          - matchName: github.com
          - matchPattern: "*.github.com"
